# ROS2_Thesis

./: .gitmodules  LICENSE  README.md  Roslaunch fix  custom_bt.xml  navigate_to_pose_replan.xml  rviz.rviz  scout_base  scout_gazebo_sim  ugv_sdk
costmap_converter/: CMakeLists.txt
costmap_converter/include/costmap_converter/: costmap_converter_interface.h  costmap_to_polygons.h
costmap_converter/src/: costmap_to_polygons.cpp
costmap_test/: CMakeLists.txt  package.xml
costmap_test/include/costmap_test/: costmap_test.hpp
costmap_test/src/: costmap_test.cpp
goal_pose/: CMakeLists.txt  package.xml
goal_pose/include/goal_pose/: goal_pose.hpp
goal_pose/src/: goal_pose.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav2_custom_controller/share/nav2_custom_controller/: package.dsv  package.ps1  package.sh
laser_filters/examples/: angular_filter_example.yaml
laser_filters/src/: scan_to_scan_filter_chain.cpp
log/: latest_build
mpc/: CMakeLists.txt  package.xml
mpc/include/mpc/: MPC_diffDrive_fblin.h  feedback_lin.hpp
mpc/src/: GUROBIsolver.cpp  MPC_diffDrive_fblin.cpp  fblin_unicycle.cpp  feedback_lin.cpp  mpc.cpp
my_nav2_client/: CMakeLists.txt  package.xml
my_nav2_client/src/: navigate_to_pose_client.cpp
nav2_custom_controller/: CMakeLists.txt  custom_controller_plugin.xml  package.xml
nav2_custom_controller/include/nav2_custom_controller/: MPC_diffDrive_fblin.h  convex_hull.hpp  custom_controller.hpp  fblin_unicycle.h  feedback_lin.hpp
nav2_custom_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nav2_custom_controller/install/nav2_custom_controller/include/nav2_custom_controller/: custom_controller.hpp
nav2_custom_controller/install/nav2_custom_controller/share/ament_index/resource_index/package_run_dependencies/: nav2_custom_controller
nav2_custom_controller/install/nav2_custom_controller/share/nav2_custom_controller/: local_setup.dsv  local_setup.sh  package.bash  package.ps1  package.sh
nav2_custom_controller/install/nav2_custom_controller/share/nav2_custom_controller/cmake/: nav2_custom_controllerConfig.cmake
nav2_custom_controller/log/: latest_build
nav2_custom_controller/params/: mpc_param.yaml
nav2_custom_controller/src/: GUROBIsolver.cpp  MPC_diffDrive_fblin.cpp  convex_hull.cpp  custom_controller.cpp  fblin_unicycle.cpp  feedback_lin.cpp  mpc_node.cpp
nav2_custom_controller_msgs/: CMakeLists.txt  package.xml
nav2_custom_controller_msgs/msg/: ColumnMsg.msg  MatrixMsg.msg
nmea_navsat_driver/config/: nmea_tcpclient_driver.yaml
plugin/: CMakeLists.txt  package.xml  plugin.xml
plugin/include/plugin/: MPC_diffDrive_fblin.h  plugin.hpp
plugin/src/: GUROBIsolver.cpp  MPC_diffDrive_fblin.cpp  fblin_unicycle.cpp  plugin.cpp
robot_path/: CMakeLists.txt  package.xml
robot_path/src/: pose_to_path.cpp
scout-navigation/config/: ekf_localization_with_gps.yaml  nav2_params.yaml
scout-navigation/launch/: gps.launch.py  localization_launch.py  nav2.launch.py
scout-navigation/maps/: coridor_obstacles.pgm  coridor_obstacles.yaml  coridor_obstacles2.pgm  coridor_obstacles2.yaml  indoor_outdoor.pgm  indoor_outdoor.yaml  map.pgm  map.yaml  map1.pgm  map1.yaml  map_1711562433.pgm  map_1711562433.yaml  mario_coridor_initial.pgm  mario_coridor_initial.yaml  mario_coridor_v3.pgm  mario_coridor_v3.yaml  mario_coridor_v4.pgm  mario_coridor_v4.yaml  mario_initial.pgm  mario_initial.yaml  mario_room1.yaml  my_map.pgm  my_map.yaml  out.pgm  out.yaml  outdoor1.pgm  outdoor1.yaml  outdoor2.pgm  outdoor2.yaml  outdoor3.pgm  outdoor3.yaml  outdoor_space.pgm  outdoor_space.yaml  room_coridor.pgm  room_coridor.yaml  room_obstacles.pgm  room_obstacles.yaml  test.pgm  test.yaml  testmap.pgm  (+5 more)
scout_base/launch/: scout_base.launch.py  scout_mini_base.launch.py
scout_cartographer/: CMakeLists.txt  package.xml
scout_cartographer/config/: scout_rplidar_2d.lua
scout_cartographer/launch/: occupancy_grid.launch.py  scout_cartographer.launch.py
scout_cartographer/rviz/: scout_cartographer.rviz
scout_description/urdf/: scout_mini.xacro
scout_gazebo_sim/launch/: scout_mini_empty_world.launch.py  scout_v2_empty_world.launch.py
scout_gazebo_sim/models/scout_mini/: scout_mini.sdf
scout_mpc/: scout_description  scout_msgs
scout_mpc/costmap_converter/include/costmap_converter/: costmap_converter_interface.h
scout_mpc/costmap_converter/src/: costmap_converter_node.cpp
scout_mpc/costmap_test/: CMakeLists.txt
scout_mpc/costmap_test/include/costmap_test/: GUROBIsolver.h  costmap_test.hpp  fblin_unicycle.h
scout_mpc/costmap_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scout_mpc/costmap_test/log/: latest_build
scout_mpc/costmap_test/src/: GUROBIsolver.cpp  MPC_diffDrive_fblin.cpp  costmap_test.cpp
scout_mpc/nav2_custom_controller/: CMakeLists.txt
scout_mpc/nav2_custom_controller/include/nav2_custom_controller/: GUROBIsolver.h  custom_controller.hpp
scout_mpc/nav2_custom_controller/install/nav2_custom_controller/share/nav2_custom_controller/: package.dsv  package.zsh
scout_mpc/nav2_custom_controller/src/: MPC_diffDrive_fblin.cpp  custom_controller.cpp
scout_mpc/scout_navigation/config/: ekf_localization_with_gps.yaml
scout_mpc/scout_navigation/maps/: my_map.pgm
scout_navigation/: bt.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml  navigate_w_replanning_distance.xml  navigate_w_replanning_only_if_path_becomes_invalid.xml  package.xml  test.xml  test_bt.xml
scout_navigation/config/: nav2_params.yaml
scout_navigation/launch/: nav2.launch.py
scout_navigation/maps/: my_map.yaml
scout_navigation/rviz/: config.rviz  scout_mini_navigation.rviz
teleop/: CMakeLists.txt  package.xml
teleop/include/teleop/: teleop.hpp
teleop/src/: teleop.cpp
turtlebot3/turtlebot3_navigation2/param/: waffle.yaml
turtlebot3_simulations/turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
