<?xml version="1.0"?>
<package format="2">
  <name>robot_path</name>
  <version>0.0.0</version>
  <description>ROS2 Node to convert PoseStamped messages to Path</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

</package>

